[package]
name = "snow"
version = "0.2.2"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.27", features = ["derive", "wrap_help"] }
env_logger = "0.11.6"
gethostname = "0.5.0"
inquire = { version = "0.7.5" }
kdam = { version = "0.6.2", features = ["derive", "rayon", "rich", "spinner"] }
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.26.3", features = ["derive"] }
test-log = "0.2.17"
testing_logger = "0.1.1"
users = "0.11.0"
